--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,23 @@ body, a:link, a:visited, a:active{
 }
 .dancer{
   border:10px solid red;
-  border-radius:10px;
+  border-radius:100%;
   position:absolute;
+}
+
+.harryDancer{
+  border:10px solid dodgerblue;
+  border-radius:100%;
+  position:absolute;
+}
+
+.hermoineDancer {
+  border: 20px solid orange; 
+  border-radius: 100%;
+  position: absolute;
+}
+
+.snapeDancer {
+  border: 15px solid purple; 
+  position: absolute; 
 }
